--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,12 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bulma/css/bulma.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/create-quiz.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -95,7 +98,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/create-quiz.js"
+            ]
           }
         }
       }
